                      https://visp.inria.fr

ViSP 3.3.1 (under development)
  - Contributors:
    . This release was possible thanks to contributions from Fabien Spindler,
      Pierre Chatelain
  - New features and improvements
    . Compatibility with FreeBSD
    . Introduce transparency when displaying filled circle and rectangle with
      vpDisplayOpenCV
  - Bug fixed
    . [#713] 3.3.0 build fails on non-linux systems: fatal error: 'linux/serial.h'
      file not found
    . [#716] Build issue on FreeBSD with g++
    . [#718] vpImage<unsigned char>::getValue() is not working on big endian arch
    . [#726] Segfault in vpServo when the number of visual features is very
      large (> 50.000)
    . [#728] vpProjectionDisplay doesn't display frame with RGB colors respectively
      for X, Y and Z axis
    . [#731] Link issues using pkgconfig with static libraries
----------------------------------------------
ViSP 3.3.0 (released February 14, 2020)
  - Contributors:
    . This release was possible thanks to contributions from Fabien Spindler,
      Souriya Trinh, Gatien Gaumerais, Yasutomo Shirahama, Yash Kapoor, Noura Neji,
      Rahaf Rahal, Romain Lagneau, ahfuzhang, Franco Fusco, Olivier Kermorgant,
      Alexander Oliva
  - New features and improvements
    . Upgrade to new AprilTag3 version. Note that TAG_36h10, TAG_25h7 and
      TAG_36ARTOOLKIT are deprecated and that new families: TAG_CIRCLE21h7,
      TAG_CIRCLE49h12, TAG_CUSTOM48h12, TAG_STANDARD41h12, TAG_STANDARD52h13
      are supported. AprilTag detection time is reduced
    . Remove libxml2 3rd party dependency to use pugixml built-in 
    . Replace pthreads-win32 for POSIX threads for windows 3rd party with
      pthreads4w implementation
    . New matrix and vector initialization methods to ease setting elements
    . Introduce Eigen <-> ViSP conversion functions in vp namespace
    . Add OpenBLAS, Intel MKL and Atlas explicit support
    . Add support of vpImage<vpRGBa> to vpMbGenericTracker